; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mscutils/servman/extr_query.c_UpdateServiceStatus.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mscutils/servman/extr_query.c_UpdateServiceStatus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@FALSE = common dso_local global i32 0, align 4
@SC_MANAGER_ENUMERATE_SERVICE = common dso_local global i32 0, align 4
@SERVICE_QUERY_STATUS = common dso_local global i32 0, align 4
@SC_STATUS_PROCESS_INFO = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @UpdateServiceStatus(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %7 = load i32, i32* @FALSE, align 4
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* @SC_MANAGER_ENUMERATE_SERVICE, align 4
  %9 = call i32* @OpenSCManagerW(i32* null, i32* null, i32 %8)
  store i32* %9, i32** %3, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %34

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @SERVICE_QUERY_STATUS, align 4
  %18 = call i32* @OpenServiceW(i32* %13, i32 %16, i32 %17)
  store i32* %18, i32** %5, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %31

21:                                               ; preds = %12
  %22 = load i32*, i32** %5, align 8
  %23 = load i32, i32* @SC_STATUS_PROCESS_INFO, align 4
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = ptrtoint i32* %25 to i32
  %27 = call i32 @QueryServiceStatusEx(i32* %22, i32 %23, i32 %26, i32 4, i32* %6)
  %28 = load i32*, i32** %5, align 8
  %29 = call i32 @CloseServiceHandle(i32* %28)
  %30 = load i32, i32* @TRUE, align 4
  store i32 %30, i32* %4, align 4
  br label %31

31:                                               ; preds = %21, %12
  %32 = load i32*, i32** %3, align 8
  %33 = call i32 @CloseServiceHandle(i32* %32)
  br label %34

34:                                               ; preds = %31, %1
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i32* @OpenSCManagerW(i32*, i32*, i32) #1

declare dso_local i32* @OpenServiceW(i32*, i32, i32) #1

declare dso_local i32 @QueryServiceStatusEx(i32*, i32, i32, i32, i32*) #1

declare dso_local i32 @CloseServiceHandle(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
